Fixed word-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,7 @@ li img {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    word-wrap: break-word;
 }
 
 .message h3 em {
